WIP: AdapterActivatorServerTest.java